crates/gpui-form-macros/tests/ui/fail/empty_validate.rs
use gpui_form_macros::FormStore;

#[derive(FormStore)]
struct Example {
    #[form(validate())]
    value: String,
}

fn main() {}
