crates/gpui-form-macros/tests/ui/fail/empty_validate.stderr
error: unexpected end of input, validate requires at least one trigger
 --> tests/ui/fail/empty_validate.rs:5:21
  |
5 |     #[form(validate())]
  |                     ^
